Refactor: Reengineer City to implement AggregateRoot and add unit tests, Refs #477